Adicionando CI e CD

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -53,7 +53,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: crisvagner/kube-news:v1
+          image: crisvagner/kube-news:{{TAG}}
           ports: 
           - containerPort: 8080
           env:
